--- a/style.css
+++ b/style.css
@@ -1,6 +1,12 @@
 body {
   margin: 0;
-  background-color: #adb3db;
+  background-color: #1a1d22;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  font-family: Arial, sans-serif;
+  color: #e6eaf0;
 }
 
 #all {
@@ -9,13 +15,14 @@ body {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  background-color: #adb3db;
+  align-items: center;
 }
 
 #choices {
   display: flex;
   justify-content: center;
   align-items: center;
+  margin-top: 2vh;
 }
 
 #logo {
@@ -24,11 +31,35 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
+  margin-bottom: 10vh;
+}
+
+#logotxt {
+  font-size: 4vw;
+  font-weight: bold;
+  text-transform: uppercase;
+  letter-spacing: 0.3vw;
+  color: white;
+  text-shadow: 0.3vw 0.3vw #19150f;
 }
 
 .choiceicon {
   width: 8vw;
   height: 8vw;
+  border-radius: 50%;
+  border: 0.15vw solid #19150f;
+  margin: 1vw;
+  cursor: pointer;
+  background-color: #e5e2dd;
+  filter: invert(100%);
+}
+
+.choiceicon:hover {
+  background-image: radial-gradient(
+    circle,
+    rgba(0, 0, 0, 0.1),
+    rgba(0, 0, 0, 0)
+  );
 }
 
 #game {
@@ -37,17 +68,11 @@ body {
   align-items: center;
 }
 
-#container #game {
-  z-index: 1;
-}
-#container #choices {
-  z-index: 2;
-}
-
 #player {
   display: flex;
   justify-content: right;
   align-items: center;
+  filter: invert(100%);
 }
 
 #score {
@@ -55,21 +80,33 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  font-size: 5rem;
+  font-size: 5vw;
+  margin-top: 3vh;
 }
 
-#scissors {
+#computer {
   display: flex;
   justify-content: left;
   align-items: center;
+  filter: invert(100%);
 }
 
 .againbutton {
-  margin-top: 10px;
+  margin-top: 2vh;
   border: none;
-  background-color: #676a7f;
+  background-color: #007bff;
   color: white;
-  width: 60%;
-  height: 2vw;
-  font-size: 1.2rem;
+  padding: 1vh 2vw;
+  font-size: 1.2vw;
+  border-radius: 100px;
+  cursor: pointer;
+}
+
+.againbutton:hover {
+  background-color: #0056b3;
+}
+
+.gamepic {
+  width: 25vw;
+  height: 25vw;
 }
